在_config和author-profile添加访问统计组件

--- a/_config.yml
+++ b/_config.yml
@@ -115,6 +115,7 @@ author:
   xing             :
   youtube          :
   wikipedia        :
+  person_statistic : "https://flagcounter.me/details/doX"
 
 
 # Reading Files
