--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -20,3 +20,8 @@ main:
     
   - title: "Guide"
     url: /markdown/
+
+  - title: ![Visitor Count](https://komarev.com/ghpvc/?username=qiao19981314&label=PROFILE+VIEWS)
+    # url: /markdown/
+
+  
