--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -7,8 +7,8 @@ main:
     url: \#publications  
     # url: /publications/
 
-  - title: "Talks"
-    url: \#talks    
+  - title: "Network"
+    url: \#Network    
     # url: /talks/    
 
   - title: "Teaching"
