--- a/_config.yml
+++ b/_config.yml
@@ -11,9 +11,9 @@ title                    : "Yongliang Qiao / Personal Page"
 title_separator          : "-"
 name                     : &name "Yongliang Qiao"
 description              : &description "personal description"
-url                      : https://qiao19881314.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+url                      : https://yongliang-qiao.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
-repository               : "qiao19881314/qiao19881314.github.io"
+repository               : "yongliang-qiao/yongliang-qiao.github.io"
 teaser                   :  # filename of teaser fallback teaser image placed in /images/, .e.g. "500x300.png"
 breadcrumbs              : false # true, false (default)
 words_per_minute         : 160
@@ -96,7 +96,7 @@ author:
   flickr           :
   facebook         :
   foursquare       :
-  github           : "qiao19881314"
+  github           : "yongliang-qiao"
   google_plus      :
   keybase          :
   instagram        :
